--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">98,536</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">97,966</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">project.tests.LoginTest</td><td><a href="#m0">CancelOderTest</a></td><td rowspan="1">1708587219791</td><td rowspan="1">19522</td></tr><tr class="passedeven"><td><a href="#m1">DashboardTest</a></td><td rowspan="1">1708587157420</td><td rowspan="1">41272</td></tr><tr class="passedeven"><td><a href="#m2">SearchTest</a></td><td rowspan="1">1708587198698</td><td rowspan="1">21088</td></tr><tr class="passedeven"><td><a href="#m3">loginTest</a></td><td rowspan="1">1708587144900</td><td rowspan="1">12516</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">project.tests.LoginTest</td><td><a href="#m0">DashboardTest</a></td><td rowspan="1">1710085747189</td><td rowspan="1">18230</td></tr><tr class="passedeven"><td><a href="#m1">SearchTest</a></td><td rowspan="1">1710085765421</td><td rowspan="1">30078</td></tr><tr class="passedeven"><td><a href="#m2">loginTest</a></td><td rowspan="1">1710085716193</td><td rowspan="1">30990</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">project.tests.LoginTest#CancelOderTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">project.tests.LoginTest#DashboardTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">project.tests.LoginTest#SearchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">project.tests.LoginTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">project.tests.LoginTest#DashboardTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">project.tests.LoginTest#SearchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">project.tests.LoginTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
