--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1654321652\testng-customsuite.xml</span>
+                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse-849431076\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,11 +101,6 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="project.tests.LoginTest" class="method navigator-link" hash-for-method="CancelOderTest">CancelOderTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="project.tests.LoginTest" class="method navigator-link" hash-for-method="DashboardTest">DashboardTest</a> <!-- method navigator-link -->
@@ -141,13 +136,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CancelOderTest">
-                  </a> <!-- CancelOderTest -->
-                  <span class="method-name">CancelOderTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="DashboardTest">
                   </a> <!-- DashboardTest -->
                   <span class="method-name">DashboardTest</span>
@@ -172,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1654321652\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse-849431076\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -221,23 +209,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'DashboardTest')
+data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'project.tests.LoginTest')
-data.setCell(0, 3, 41272);
+data.setCell(0, 3, 30990);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'SearchTest')
 data.setCell(1, 2, 'project.tests.LoginTest')
-data.setCell(1, 3, 21088);
+data.setCell(1, 3, 30078);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'CancelOderTest')
+data.setCell(2, 1, 'DashboardTest')
 data.setCell(2, 2, 'project.tests.LoginTest')
-data.setCell(2, 3, 19522);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginTest')
-data.setCell(3, 2, 'project.tests.LoginTest')
-data.setCell(3, 3, 12516);
+data.setCell(2, 3, 18230);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -275,27 +259,27 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">openUrl</span>
-                <span class="method-start">1850 ms</span>
+                <span class="method-start">1659 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">5954 ms</span>
+                <span class="method-start">19878 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">DashboardTest</span>
-                <span class="method-start">18474 ms</span>
+                <span class="method-start">50874 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">SearchTest</span>
-                <span class="method-start">59752 ms</span>
+                <span class="method-start">69106 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">CancelOderTest</span>
-                <span class="method-start">80845 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">afterclass</span>
+                <span class="method-start">99185 ms</span>
+              </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">close</span>
-                <span class="method-start">100389 ms</span>
+                <span class="method-start">99632 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
