--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62b792">  <td>24/02/22 13:32:18</td>   <td>0</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:project.tests.LoginTest@248e319b]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@897848096</td>   <td></td> </tr>
-<tr bgcolor="62b792">  <td>24/02/22 13:33:59</td>   <td>100381</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:project.tests.LoginTest@248e319b]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@897848096</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/02/22 13:32:20</td>   <td>1842</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.openUrl()[pri:0, instance:project.tests.LoginTest@248e319b]">&gt;&gt;openUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@897848096</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/02/22 13:33:39</td>   <td>80837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.CancelOderTest()[pri:3, instance:project.tests.LoginTest@248e319b]">CancelOderTest</td> 
-  <td>main@897848096</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/02/22 13:32:24</td>   <td>5946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:project.tests.LoginTest@248e319b]">loginTest</td> 
-  <td>main@897848096</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/02/22 13:33:18</td>   <td>59744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.SearchTest()[pri:2, instance:project.tests.LoginTest@248e319b]">SearchTest</td> 
-  <td>main@897848096</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>24/02/22 13:32:37</td>   <td>18466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.DashboardTest()[pri:1, instance:project.tests.LoginTest@248e319b]">DashboardTest</td> 
-  <td>main@897848096</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>24/03/10 21:49:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterclass()[pri:0, instance:project.tests.LoginTest@5d0bf09b]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="62b792">  <td>24/03/10 21:49:55</td>   <td>447</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:project.tests.LoginTest@5d0bf09b]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>24/03/10 21:49:25</td>   <td>-30079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.SearchTest()[pri:2, instance:project.tests.LoginTest@5d0bf09b]">SearchTest</td> 
+  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>24/03/10 21:48:17</td>   <td>-97525</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.openUrl()[pri:0, instance:project.tests.LoginTest@5d0bf09b]">&gt;&gt;openUrl</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>24/03/10 21:48:36</td>   <td>-79307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:project.tests.LoginTest@5d0bf09b]">loginTest</td> 
+  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>24/03/10 21:49:07</td>   <td>-48311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.DashboardTest()[pri:1, instance:project.tests.LoginTest@5d0bf09b]">DashboardTest</td> 
+  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="62b792">  <td>24/03/10 21:48:16</td>   <td>-99178</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:project.tests.LoginTest@5d0bf09b]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1640296160</td>   <td></td> </tr>
 </table>
